@@ -5,13 +5,13 @@
 // based on the Program) you indicate your acceptance of this statement,
 // and all its terms.
 //
-// $Id: G4RayTracerViewer.hh,v 1.1 2000-02-23 16:03:52 johna Exp $
+// $Id: G4RayTracerViewer.hh,v 1.2 2000-02-28 15:19:49 johna Exp $
 // GEANT4 tag $Name: not supported by cvs2svn $
 
 // John Allison  17th March 2000
 
-#ifndef RAYTRACERVIEWER_HH
-#define RAYTRACERVIEWER_HH
+#ifndef G4RAYTRACERVIEWER_HH
+#define G4RAYTRACERVIEWER_HH
 
 #include "G4VViewer.hh"
 
